force-app/main/default/objects/Commercial_Contract__c/Commercial_Contract__c.object-meta.xml
<CustomObject>
    <description>Sears Commercial Contracts</description>
    <label>Commercial Contract</label>
    <nameField>
        <label>Commercial Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>