force-app/main/default/objects/Commercial_Contract__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>