force-app/main/default/objects/Commercial_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplier agreement</fullName>
                <default>true</default>
                <label>Supplier agreement</label>
            </value>
            <value>
                <fullName>Subcontractor agreement</fullName>
            </value>
            <value>
                <fullName>Government agreement</fullName>
            </value>
            <value>
                <fullName>Signed Sales Order/Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>