force-app/main/default/objects/Commercial_Contract__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c, &quot;View Document&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document</label>
    <type>Text</type>
</CustomField>