force-app/main/default/objects/Commercial_Contract__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addendums</fullName>
            </value>
            <value>
                <fullName>Final/signed contract</fullName>
            </value>
            <value>
                <fullName>Initial forecast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Site readiness form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>