force-app/main/default/objects/Commercial_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the contract ends</description>
    <inlineHelpText>Contract End Date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>