force-app/main/default/objects/Commercial_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Contract Start Date</description>
    <inlineHelpText>Contract Start Date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>